--- a/0x03-responsive_design/03-index.html
+++ b/0x03-responsive_design/03-index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Description of the page less than 150 characters">
     <link rel="icon" type="image/png" href="images/favicon.jpg">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Raleway:700&display=swap" rel="stylesheet">
-    <link rel='stylesheet' href='01-styles.css'>
+    <link rel='stylesheet' href='03-styles.css'>
   </head>
   <body>
     <!– Header –>
@@ -177,7 +177,14 @@
           <div class="section-body">
             <div class="row">
               <div class="col-1-2">
-                <img src="images/pic-about-01.jpg" alt="" width="460" height="460">
+                <img
+                sizes="(max-width: 3000px) 40vw, 1200px"
+                srcset="
+                ./images/pic-about/pic-about-01_ofi5j0_c_scalew_380.jpg 380w,
+                ./images/pic-about/pic-about-01_euuhlu_c_scalew_857.jpg 857w,
+                ./images/pic-about/pic-about-01_euuhlu_c_scalew_1200.jpg 1200w"
+                src="./images/pic-about/pic-about-01_euuhlu_c_scalew_1200.jpg"
+                alt="Coffe time">
               </div>
               <div class="col-1-2">
                 <h3>Who are we</h3>
@@ -205,7 +212,14 @@
               <li class="col-1-3">
                 <article class="card-blog">
                   <div>
-                    <img src="images/pic-article-01.jpg" alt="" width="305" height="305">
+                    <img
+                    sizes="(max-width: 3000px) 40vw, 1200px"
+                    srcset="
+                    ./images/pic-article-01/pic-article-01_ueoswb_c_scalew_380.jpg 380w,
+                    ./images/pic-article-01/pic-article-01_ueoswb_c_scalew_853.jpg 853w,
+                    ./images/pic-article-01/pic-article-01_ueoswb_c_scalew_1200.jpg 1200w"
+                    src="./images/pic-article-01/pic-article-01_ueoswb_c_scalew_1200.jpg"
+                    alt="Computer with stadistics">
                   </div>
                   <p class="card-category">Career</p>
                   <h3><a href="#">Hoc loco tenere se Triarius non potuit.</a></h3>
@@ -216,7 +230,14 @@
               <li class="col-1-3">
                 <article class="card-blog">
                   <div>
-                    <img src="images/pic-article-02.jpg" alt="" width="305" height="305">
+                    <img
+                    sizes="(max-width: 3000px) 40vw, 1200px"
+                    srcset="
+                    ./images/pic-article-02/pic-article-02_xdgtcx_c_scalew_380.jpg 380w,
+                    ./images/pic-article-02/pic-article-02_xdgtcx_c_scalew_881.jpg 881w,
+                    ./images/pic-article-02/pic-article-02_xdgtcx_c_scalew_1200.jpg 1200w"
+                    src="./images/pic-article-02/pic-article-02_xdgtcx_c_scalew_1200.jpg"
+                    alt="Write on keyboard">
                   </div>
                   <p class="card-category">Digital Life</p>
                   <h3><a href="#">Ut alios omittam, hunc appello, quem ille unum secutus est.</a></h3>
@@ -227,7 +248,14 @@
               <li class="col-1-3">
                 <article class="card-blog">
                   <div>
-                    <img src="images/pic-article-03.jpg" alt="" width="305" height="305">
+                    <img
+                    sizes="(max-width: 3000px) 40vw, 1200px"
+                    srcset="
+                    ./images/pic-article-03/pic-article-03_x3s7qu_c_scalew_380.jpg 380w,
+                    ./images/pic-article-03/pic-article-03_x3s7qu_c_scalew_851.jpg 851w,
+                    ./images/pic-article-03/pic-article-03_x3s7qu_c_scalew_380.jpg 1200w"
+                    src="./images/pic-article-03/pic-article-03_x3s7qu_c_scalew_1200.jpg"
+                    alt="Peer to peer">
                   </div>
                   <p class="card-category">Social</p>
                   <h3><a href="#">Bestiarum vero nullum iudicium puto.</a></h3>
